[tool.poetry]
name = "arango_wal"
version = "0.1.0"
description = "Listen to ArangoDB's WAL changes"
authors = ["Adolfo Silva <code@adolfosilva.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adolfosilva/arango_wal"
repository = "https://github.com/adolfosilva/arango_wal"
keywords = ["arango", "arangodb", "wal", "replication", "listener", "subscriber"]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
